resources/argo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: argotestlouis.dotocean.io
    name: argotestlouis-dotocean-io-http
    port: 80
    protocol: HTTP
  - hostname: argotestlouis.dotocean.io
    name: argotestlouis-dotocean-io-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: argocd-server-tls
