resources/argo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-argo
  namespace: argocd
spec:
  hostnames:
    - argotestlouis.dotocean.io
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
