resources/argo/l7visibility.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-visibility"
spec:
  endpointSelector:
    matchLabels:
      "k8s-app": argocd-server
  ingress:
  - toEndpoints:
    - matchLabels:
        "k8s-app": argocd-server
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http: [{}]
