resources/argo/l7visibility_updated.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-observe
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: argocd
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      - port: "6379"
        protocol: TCP
      rules:
        http:
        - {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      - port: "6379"
        protocol: TCP
      rules:
        http:
        - {}
